--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,12 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorSecondary</item>
+    </style>
+
+    <style name="Widget.Button.Primary" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/gradient_orange_background</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
