--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="Widget.Edittext.Primary" parent="Widget.AppCompat.EditText">
+        <item name="android:paddingLeft"> 8dp </item>
+        <item name="android:paddingRight"> 8dp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
 </resources>
