--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,5 +2,6 @@
 <resources>
     <style  name="Theme.Debt" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="button"> @style/Widget.Button.Primary</item>
+        <item name="edittext"> @style/Widget.Edittext.Primary</item>
     </style>
 </resources>
