--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
-        android:background="@drawable/gradient_blue_background"/>
+        android:background="@drawable/gradient_blue_background">
+    <Button
+            android:text="Start"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button" style="?button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/editText" app:layout_constraintEnd_toEndOf="@+id/editText"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:hint="Name"
+            style="?edittext" android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"/>
+    <EditText
+            style="?edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/editText2"
+            app:layout_constraintStart_toStartOf="@+id/editText"
+            app:layout_constraintEnd_toEndOf="@+id/editText" android:hint="E-mail" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText"/>
+    <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+    <TextView
+            android:text="Enter your details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/imageView"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            android:textAppearance="@style/TextAppearance.AppCompat" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+</android.support.constraint.ConstraintLayout>
