--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:layout_height="50dp"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/edittext_name_main"
             android:hint="Name"
             style="?edittext"
             app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -23,9 +23,9 @@
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/edittext_email_main"
             android:hint="E-mail (optional)" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_name_main" app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/textView"/>
     <ImageView
             android:layout_width="120dp"
@@ -46,8 +46,8 @@
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:id="@+id/imageButton"
-            app:srcCompat="@drawable/ic_start" style="?button" app:layout_constraintTop_toBottomOf="@+id/editText2"
+            android:id="@+id/button_start_main"
+            app:srcCompat="@drawable/ic_start" style="?button" app:layout_constraintTop_toBottomOf="@+id/edittext_email_main"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/textView"/>
 </android.support.constraint.ConstraintLayout>
