Organize files in packages

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,16 +7,16 @@
 
     <fragment
             android:id="@+id/navigation_test"
-            android:name="com.worldconnect.debtassistant.ui.test.TestFragment"
+            android:name="com.worldconnect.debtassistant.ui.fragment.TestFragment"
             tools:layout="@layout/fragment_test"/>
 
     <fragment
             android:id="@+id/navigation_overview"
-            android:name="com.worldconnect.debtassistant.ui.overview.OverviewFragment"
+            android:name="com.worldconnect.debtassistant.ui.fragment.OverviewFragment"
             tools:layout="@layout/fragment_overview"/>
 
     <fragment
             android:id="@+id/navigation_tips"
-            android:name="com.worldconnect.debtassistant.ui.tips.TipsFragment"
+            android:name="com.worldconnect.debtassistant.ui.fragment.TipsFragment"
             tools:layout="@layout/fragment_tips"/>
 </navigation>
