--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
             app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="200dp"
-            android:id="@+id/textInputLayout2" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            android:id="@+id/textlayout_name_main" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -31,10 +31,10 @@
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginTop="16dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:id="@+id/textInputLayout">
+            app:layout_constraintStart_toStartOf="@+id/textlayout_name_main"
+            app:layout_constraintEnd_toEndOf="@+id/textlayout_name_main"
+            app:layout_constraintTop_toBottomOf="@+id/textlayout_name_main" android:layout_marginTop="16dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:id="@+id/textlayout_email_main">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -42,10 +42,11 @@
                 android:hint="E-mail (optional)"/>
     </com.google.android.material.textfield.TextInputLayout>
     <android.support.design.button.MaterialButton
-            android:text="Button"
+            android:text="Start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button" app:layout_constraintStart_toStartOf="@+id/textView"
+            android:id="@+id/button_start_main" app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginTop="32dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textlayout_email_main" android:layout_marginTop="32dp"
+            app:icon="@drawable/ic_start" app:iconGravity="textStart" app:iconPadding="16dp"/>
 </android.support.constraint.ConstraintLayout>
