--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:hint="E-mail (optional)"/>
     </com.google.android.material.textfield.TextInputLayout>
-    <android.support.design.button.MaterialButton
+    <com.google.android.material.button.MaterialButton
             android:text="Start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -49,4 +49,4 @@
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textlayout_email_main" android:layout_marginTop="32dp"
             app:icon="@drawable/ic_start" app:iconGravity="textStart" app:iconPadding="16dp"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
