--- a/app/src/main/res/values/questions.xml
+++ b/app/src/main/res/values/questions.xml
@@ -1,76 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="question1">I have been running behind for more than 1 month with the rent,
-        mortgage or health insurance premium.</string>
-    <string-array name="answer1">
-        <item>Yes</item>
-        <item>No</item>
+
+    <string-array name="questions">
+
+        <item>I have been running behind for more than 1 month with the rent,
+            mortgage or health insurance premium.
+        </item>
+
+        <item>At the end of the month I am usually in the red and I am unable to catch up.</item>
+
+        <item>It is impossible to save for extra expenses (such as a new refrigerator).</item>
+
+        <item>I need more than 25% of my income to pay off my debts.</item>
+
+        <item>I have lost the overview in my administration or bank statements.</item>
+
+        <item>I borrow money from family or acquaintances to close the gap.</item>
+
+        <item>I have requested an advance on my salary.</item>
+
+        <item>I take money from my childrens savings account to make up for my own deficit.</item>
+
+        <item>I sometimes can't sleep because of my financial worries.</item>
+
+        <item>I do not know if I am entitled to surcharges or remission of taxes.</item>
+
+        <item>I leave the mailbox closed.</item>
+
+        <item>My direct debits are often refused or reversed.</item>
     </string-array>
 
-    <string name="question2">At the end of the month I am usually in the red and I am unable to catch up.</string>
-    <string-array name="answer2">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question3">It is impossible to save for extra expenses (such as a new refrigerator).</string>
-    <string-array name="answer3">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question4">I need more than 25% of my income to pay off my debts.</string>
-    <string-array name="answer4">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question5">I have lost the overview in my administration or bank statements.</string>
-    <string-array name="answer5">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question6">I borrow money from family or acquaintances to close the gap.</string>
-    <string-array name="answer6">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question7">I have requested an advance on my salary.</string>
-    <string-array name="answer7">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question8">I take money from my childrens savings account to make up for my own deficit.</string>
-    <string-array name="answer8">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question9">I sometimes cant sleep because of my financial worries.</string>
-    <string-array name="answer9">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question10">I do not know if I am entitled to surcharges or remission of taxes.</string>
-    <string-array name="answer10">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question11">I leave the mailbox closed.</string>
-    <string-array name="answer11">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
-
-    <string name="question12">My direct debits are often refused or reversed.</string>
-    <string-array name="answer12">
-        <item>Yes</item>
-        <item>No</item>
-    </string-array>
 
 </resources>
