--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -44,8 +44,8 @@
             android:text="Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_next" android:layout_marginBottom="32dp"
+            android:id="@+id/button_next" android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radio_answers" app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintHorizontal_bias="0.5"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
