Make navigation to Advice fragment possible

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,4 +19,9 @@
             android:icon="@drawable/ic_bookmark_white_24dp"
             android:title="Tips"/>
 
+    <item
+            android:id="@+id/navigation_advice"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="Advice" android:enabled="false"/>
+
 </menu>
