--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/bottom_nav_menu" app:itemBackground="@drawable/gradient_orange_background"/>
+            app:menu="@menu/bottom_nav_menu" app:itemBackground="@drawable/gradient_orange_background"
+            app:labelVisibilityMode="labeled"/>
 
     <fragment
             android:id="@+id/nav_host_fragment"
