--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,12 +7,21 @@
 
 
     <TextView
-            android:text="Welcome 'Name'"
+            android:text="Welcome"
             android:textSize="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_greeting" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="Name"
+            android:textSize="40sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_name"
+            app:layout_constraintTop_toBottomOf="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
