Update theme colors

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 
     <style  name="Theme.Debt" parent="Theme.MaterialComponents.NoActionBar">
         <item name="colorPrimary">#FB8C00</item>
-
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorButtonNormal">@color/colorSecondaryDark</item>
+        <!--<item name="colorAccent">@color/colorPrimaryDark</item>-->
     </style>
 
 </resources>
