--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -1,51 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/button_next" android:id="@+id/radio_answers"
-            app:layout_constraintTop_toBottomOf="@+id/text_question" app:layout_constraintHorizontal_bias="0.5">
-        <RadioButton
-                android:text="Yes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radio_yes" android:layout_weight="1"/>
-        <RadioButton
-                android:text="No"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radio_no" android:layout_weight="1"/>
-    </RadioGroup>
-    <TextView
-            tools:text="Question 0"
-            android:textSize="48sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_question_number"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp" android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/text_question"/>
-    <TextView
-            tools:text="I have been running behind for more than 1 month with the rent, mortgage or health insurance premium."
-            android:layout_width="0dp"
-            android:textSize="24sp"
-            android:layout_height="wrap_content" android:id="@+id/text_question"
-            app:layout_constraintTop_toBottomOf="@+id/text_question_number"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
-            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
-            android:layout_marginRight="48dp" android:gravity="center_horizontal"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/radio_answers"/>
+
+
     <Button
             android:text="Next"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button_next" android:layout_marginBottom="64dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            android:id="@+id/button_next"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/card_question"
+            app:layout_constraintStart_toStartOf="@+id/card_question" android:layout_marginBottom="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <com.google.android.material.card.MaterialCardView
+            android:layout_width="0dp"
+            android:layout_height="400dp"
+            android:id="@+id/card_question" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
+            android:layout_marginRight="48dp" android:layout_marginEnd="48dp"
+            app:cardElevation="2dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_next">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/radio_answers"
+                    app:layout_constraintTop_toBottomOf="@+id/text_question" app:layout_constraintHorizontal_bias="0.5"
+                    android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="72dp">
+                <RadioButton
+                        android:text="Yes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/radio_yes" android:layout_weight="1"/>
+                <RadioButton
+                        android:text="No"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/radio_no" android:layout_weight="1"/>
+            </RadioGroup>
+            <TextView
+                    tools:text="Question 0"
+                    android:textSize="32sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/text_question_number"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp" android:textStyle="bold"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintBottom_toTopOf="@+id/text_question"/>
+            <TextView
+                    tools:text="I have been running behind for more than 1 month with the rent, mortgage or health insurance premium."
+                    android:layout_width="0dp"
+                    android:textSize="18sp"
+                    android:layout_height="wrap_content" android:id="@+id/text_question"
+                    app:layout_constraintTop_toBottomOf="@+id/text_question_number"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
+                    android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                    android:layout_marginRight="48dp" android:gravity="center_horizontal"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintBottom_toTopOf="@+id/radio_answers"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
