--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,8 @@
             android:id="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"/>
     <TextView
             android:text="Name"
             android:textSize="40sp"
@@ -24,4 +25,12 @@
             app:layout_constraintTop_toBottomOf="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
     />
+    <Button
+            android:text="Begin test"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:id="@+id/button_begin_test" app:layout_constraintStart_toStartOf="@+id/text_welcome"
+            app:layout_constraintEnd_toEndOf="@+id/text_welcome" android:layout_marginTop="250dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_name"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
