--- a/app/src/main/res/layout/fragment_tips.xml
+++ b/app/src/main/res/layout/fragment_tips.xml
@@ -11,7 +11,7 @@
 
         <TextView
                 android:text="@string/tips"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/text_tips" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
