Change button text to Start

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
 
 
     <Button
-            android:text="Begin"
+            android:text="Start"
             android:layout_width="0dp"
             android:layout_height="75dp"
             android:id="@+id/button_begin_test"
